--- a/search_results.html
+++ b/search_results.html
@@ -36,7 +36,7 @@
 								  
 								  <div class="form-row">
 								  <div class="form-group col-md-10">
-									<input autofocus type="text" class="form-control form-control-lg" name="query" id="query" placeholder="Search" value = "{{ query }}" autocomplete = "off" maxlength = "52"/>
+									<input autofocus type="text" class="form-control form-control-lg" name="search_query" id="search_query" placeholder="Search" value = "{{ search_query }}" autocomplete = "off" maxlength = "52"/>
 								</div>
 								  <div class="form-group col-md-2">
 									<button type="submit" class="btn btn-primary" style="background-color:#1FB58F;">Search</button>
