--- a/search_results.html
+++ b/search_results.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Zerodha Python Test Task</title>
+	<title>Bhavcopy EOD Data</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
@@ -27,7 +27,7 @@
 		<div class="container-table100">
 			<div class="wrap-table100">
 				<div class="heading">
-						<h1><center>Zerodha Task : BSE Bhavcopy Data</center></h1>
+						<h1><center>BSE Bhavcopy Data</center></h1>
 				</div>
 				
 				<div class="container">
@@ -85,17 +85,11 @@
 							</tbody>
 						</table>
 						<p>*Data is sourced from BSE Bhavcopy and is for representational purpose only. I am not responsible for any event occuring due to the use of this webpage</p>
-					<p>Made by <a href="https://github.com/theimperium20">theimperium20</a> for <a href="https://zerodha.com/">Zerodha</a>
+					<p>Made by <a href="https://github.com/theimperium20">theimperium20</a>
 				</div>
 			</div>
 		</div>
-	</div>
-	<div id="github-card" 
-	data-sort-by="stars"
-	data-header-text="Most starred repositories"
-	data-max-repos="5"
-	data-username="theimperium20">
-</div>
+
 
 	
 
