--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Zerodha Python Test Task</title>
+	<title>Bhavcopy EOD Data</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
@@ -85,7 +85,7 @@
 						</tbody>
 					</table>
 					<p>*Data is sourced from BSE Bhavcopy and is for representational purpose only. I am not responsible for any event occuring due to the use of this webpage</p>
-					<p>Made by <a href="https://github.com/theimperium20">theimperium20</a> for <a href="https://zerodha.com/">Zerodha</a>
+					<p>Made by <a href="https://github.com/theimperium20">theimperium20</a>
 				</div>
 			</div>
 		</div>
